asynchronous problem solved(2)

--- a/question_generator/locales/en.json
+++ b/question_generator/locales/en.json
@@ -1,15 +1,9 @@
 {
-
 	"Which city is higher above sea level?": "Which city is higher above sea level?",
 	"Which city has more population?": "Which city has more population?",
 	"Which city is in?": "Which city is in %s?",
-
-
-
-    "Which planet is bigger?": "Which planet is bigger?",
-
-
-
-    
-    "Who has more Grand Slams?": "Who has more Grand Slams?"
+	"Which planet is bigger?": "Which planet is bigger?",
+	"Who has more Grand Slams?": "Who has more Grand Slams?",
+	"Who has more followers?": "Who has more followers?",
+	"Who has more looses?": "Who has more looses?"
 }
