Errors solved in question generation and new template added

--- a/question_generator/locales/en.json
+++ b/question_generator/locales/en.json
@@ -5,5 +5,6 @@
 	"Which planet is bigger?": "Which planet is bigger?",
 	"Who has more Grand Slams?": "Who has more Grand Slams?",
 	"Who has more followers?": "Who has more followers?",
-	"Who has more looses?": "Who has more looses?"
+	"Who has more looses?": "Who has more looses?",
+	"Which city has a larger area?": "Which city has a larger area?"
 }
