--- a/question_generator/locales/en.json
+++ b/question_generator/locales/en.json
@@ -2,9 +2,12 @@
 	"Which city is higher above sea level?": "Which city is higher above sea level?",
 	"Which city has more population?": "Which city has more population?",
 	"Which city is in?": "Which city is in %s?",
+	"Which city has a larger area?": "Which city has a larger area?",
+
 	"Which planet is bigger?": "Which planet is bigger?",
+
 	"Who has more Grand Slams?": "Who has more Grand Slams?",
 	"Who has more followers?": "Who has more followers?",
-	"Who has more looses?": "Who has more looses?",
-	"Which city has a larger area?": "Which city has a larger area?"
+	"Who has more looses?": "Who has more looses?"
+	
 }
