--- a/question_generator/locales/es.json
+++ b/question_generator/locales/es.json
@@ -8,6 +8,8 @@
 
 	"Who has more Grand Slams?": "¿Quién tiene más Grand Slams?",
 	"Who has more followers?": "¿Quién tiene más seguidores?",
-	"Who has more looses?": "¿Quién tiene más derrotas?"
+	"Who has more looses?": "¿Quién tiene más derrotas?",
+	"Who has more wins?": "¿Quién tiene más victorias?",
+	"Which player is from?" : "¿Qué jugador es de %s?"
 	
 }
