--- a/question_generator/locales/en.json
+++ b/question_generator/locales/en.json
@@ -2,7 +2,9 @@
 	"Which city is higher above sea level?": "Which city is higher above sea level?",
 	"Which city has more population?": "Which city has more population?",
 	"Which city is in?": "Which city is in %s?",
-	"Which city has a larger area?": "Which city has a larger area?",
+	"Which city has an area of?": "Which city has an area od %s km2?",
+	"Which city is governed by?": "Which city is governed by %s?",
+	"Which city is in the time zone?": "Which city is in the time zone %s?",
 	
 	"Which planet is bigger?": "Which planet is bigger?",
 
