--- a/docs/src/07_deployment_view.adoc
+++ b/docs/src/07_deployment_view.adoc
@@ -5,7 +5,7 @@ ifndef::imagesdir[:imagesdir: ../images]
 
 == Deployment View
 === Infrastructure Level 1
-image::Diag_Comp.jpg[align="center",title="Deployment Diagram",link="Diag_Comp.jpg]
+image::deployment_diagram.svg[align="center",title="Deployment Diagram",link="deployment_diagram.svg"]
 
 === Motivation:
 
@@ -24,6 +24,8 @@ The main reason we have chosen a microservices architecture is to achieve a fast
 | _API Gateway_ | _The API that comunicates the rest of the microservices with the graphical interface._
 | _Question_Generator_ | _The microservice responsible for generating questions through Wikidata._
 | _Wikidata_ | _The Wikidata API that allows us to access its information._
+| _QuestionService_  | _The microservice responsible for saving and getting information about the questions._
+| _GameService_ | _The microservice responsible for saving and getting information about the games._
 | _Users_ | _The microservice responsible for managing users._
 | _MongoDB_ | _A NoSQL based database where we can save the user's data._
 |===
