--- a/question_generator/locales/en.json
+++ b/question_generator/locales/en.json
@@ -7,6 +7,13 @@
 	"Which city is in the time zone?": "Which city is in the time zone %s?",
 	
 	"Which planet is bigger?": "Which planet is bigger?",
+	"Which planet has a mass of?": "Which planet has a mass of %s kg?",
+	"Which planet has a radius of?": "Which planet has a radius of %s km?",
+	"Which planet has an orbital period of?" : "Which planet has an orbital period of %s days?",
+	"Which planet has x as the lowest point?" : "Which planet has %s as the lowest point?",
+	"Which planet has x as the highest point?" : "Which planet has %s as the highest point?",
+	"Which planet has an area of x?" : "Which planet has an area of %s km2?",
+	"Which planet has a density of x?" : "Which planet has a density of %s kg/m3?",
 
 	"Who has more Grand Slams?": "Who has more Grand Slams?",
 	"Who has more followers?": "Who has more followers?",
