--- a/question_generator/locales/en.json
+++ b/question_generator/locales/en.json
@@ -2,9 +2,18 @@
 	"Which city is higher above sea level?": "Which city is higher above sea level?",
 	"Which city has more population?": "Which city has more population?",
 	"Which city is in?": "Which city is in %s?",
-	"Which city has an area of?": "Which city has an area od %s km2?",
+	"Which city has an area of?": "Which city has an area of %s km2?",
 	"Which city is governed by?": "Which city is governed by %s?",
 	"Which city is in the time zone?": "Which city is in the time zone %s?",
+
+	"Which autonomous community of Spain has an area of?": "Which autonomous community of Spain has an area of %s km2?",
+	"Which autonomous community of Spain has a population of?": "Which autonomous community of Spain has a population of %s?",
+	"Which autonomous community of Spain has a capital called?": "Which autonomous community of Spain has a capital called %s?",
+	"Which autonomous community of Spain has a president called?": "Which autonomous community of Spain has a president called %s?",
+	"Which autonomous community of Spain has x as the highest point?" : "Which autonomous community of Spain has %s as the highest point?",
+
+
+
 	
 	"Which planet is bigger?": "Which planet is bigger?",
 	"Which planet has a mass of?": "Which planet has a mass of %s kg?",
