--- a/question_generator/locales/en.json
+++ b/question_generator/locales/en.json
@@ -16,9 +16,10 @@
 
 	"Which team plays in?": "Which team plays in %s?",
 	"Which team trains?": "Which team trains %s?",
+	"Which football team was founded in?": "Which football team was founded in %s?",
 
-	"Which f1 pilot was born in?": "Which f1 pilot was born in %s?",
-	"Which f1 pilot has more podiums?": "Which f1 pilot has more podiums?",
-	"Which f1 pilot has more wins?": "Which f1 pilot has more wins?"
+	"Which f1 driver was born in?": "Which f1 driver was born in %s?",
+	"Which f1 driver has more podiums?": "Which f1 driver has more podiums?",
+	"Which f1 driver has more wins?": "Which f1 driver has more wins?"
 
 }
