--- a/question_generator/locales/es.json
+++ b/question_generator/locales/es.json
@@ -14,11 +14,13 @@
 	"Who has more wins?": "¿Quién tiene más victorias?",
 	"Which tennis player is from?" : "¿Qué jugador es de %s?",
 
+	"Which football team was founded in?": "¿Qué equipo de fútbol fue fundado en %s?",
 	"Which team plays in?": "¿Qué equipo juega en %s?",
 	"Which team trains?": "¿Qué equipo entrena %s?",
 
-	"Which f1 pilot was born in?": "¿Qué piloto de F1 nació en %s?",
-	"Which f1 pilot has more podiums?": "¿Qué piloto de F1 tiene más podiums?",
-	"Which f1 pilot has more wins?": "¿Qué pilto de F1 tiene más victorias?"
+	"Which f1 driver was born in?": "¿Qué piloto de F1 nació en %s?",
+	"Which f1 driver has more podiums?": "¿Qué piloto de F1 tiene más podiums?",
+	"Which f1 driver has more wins?": "¿Qué pilto de F1 tiene más victorias?"
+	
 	
 }
