--- a/question_generator/locales/es.json
+++ b/question_generator/locales/es.json
@@ -20,7 +20,10 @@
 
 	"Which f1 driver was born in?": "¿Qué piloto de F1 nació en %s?",
 	"Which f1 driver has more podiums?": "¿Qué piloto de F1 tiene más podiums?",
-	"Which f1 driver has more wins?": "¿Qué pilto de F1 tiene más victorias?"
+	"Which f1 driver has more wins?": "¿Qué pilto de F1 tiene más victorias?",
 	
+	"Which song is sing by?": "Which song is sing by %s?",
+	"Which song was released in?": "Which song was released in %s?",
+	"Which song belongs to?": "¿Qué canción pertenece a %s?"
 	
 }
