--- a/question_generator/locales/en.json
+++ b/question_generator/locales/en.json
@@ -22,7 +22,7 @@
 	"Which f1 driver has more podiums?": "Which f1 driver has more podiums?",
 	"Which f1 driver has more wins?": "Which f1 driver has more wins?",
 
-	"Which song is sing by?": "Which song is sing by %s?",
+	"Which song is song by?": "Which song is sing by %s?",
 	"Which song was released in?": "Which song was released in %s?",
 	"Which song belongs to?": "Which song belongs to %s?"
 
