Inicio preguntas videojuegos

--- a/question_generator/locales/en.json
+++ b/question_generator/locales/en.json
@@ -30,6 +30,9 @@
 	"Which serie has seasons?": "Which serie has %s seasons?",
 
 	"Which movie was realeased in?": "Which movie was realeased in %s?",
-	"Which movie was directed by?": "Which movie was directed by %s?"
+	"Which movie was directed by?": "Which movie was directed by %s?",
+
+	"Which videogames has sold more units?": "Which videogames has sold more units?",
+	"Which videogame was released in?": "Which videogame was released in %s?"
 
 }
