--- a/question_generator/locales/es.json
+++ b/question_generator/locales/es.json
@@ -30,6 +30,9 @@
 	"Which serie has seasons?": "¿Qué serie tiene %s temporadas?",
 
 	"Which movie was realeased in?": "¿Qué película fue lanzada en %s?",
-	"Which movie was directed by?": "¿Qué película fue dirigida por %s?"
+	"Which movie was directed by?": "¿Qué película fue dirigida por %s?",
+
+	"Which videogames has sold more units?": "¿Qué videojuego ha vendido más unidades?",
+	"Which videogame was released in?": "¿Qué videojuego fue lanzado el %s?"
 	
 }
