Error solved in i18n files

--- a/question_generator/locales/en.json
+++ b/question_generator/locales/en.json
@@ -28,7 +28,7 @@
 	"Who has more followers? (Tennis)": "Who has more followers? (Tennis)",
 	"Who has more looses? (Tennis)": "Who has more looses? (Tennis)",
 	"Who has more wins? (Tennis)": "Who has more wins? (Tennis)",
-	"Which tennis player is from?" : "Which tennis player is from %s?"
+	"Which tennis player is from?" : "Which tennis player is from %s?",
 
 	"Which team plays in?": "Which team plays in %s?",
 	"Which team trains?": "Which team trains %s?",
