--- a/question_generator/locales/es.json
+++ b/question_generator/locales/es.json
@@ -26,7 +26,7 @@
 	"Who has more followers?": "¿Quién tiene más seguidores? (Tenis)",
 	"Who has more looses?": "¿Quién tiene más derrotas? (Tenis)",
 	"Who has more wins?": "¿Quién tiene más victorias? (Tenis)",
-	"Which tennis player is from?" : "¿Qué jugador es de %s?"
+	"Which tennis player is from?" : "¿Qué jugador es de %s?",
 
 	"Which football team was founded in?": "¿Qué equipo de fútbol fue fundado en %s?",
 	"Which team plays in?": "¿Qué equipo juega en %s?",
