New football templates

--- a/question_generator/locales/en.json
+++ b/question_generator/locales/en.json
@@ -30,6 +30,8 @@
 	"Which team plays in?": "Which team plays in %s?",
 	"Which team trains?": "Which team trains %s?",
 	"Which football team was founded in?": "Which football team was founded in %s?",
+	"Which coach trains?": "Which coach trains %s?",
+	"Which is the stadium of?": "Which is the stadium of %s?",
 
 	"Which f1 driver was born in?": "Which f1 driver was born in %s?",
 	"Which f1 driver has more podiums?": "Which f1 driver has more podiums?",
