--- a/question_generator/locales/es.json
+++ b/question_generator/locales/es.json
@@ -31,6 +31,8 @@
 	"Which football team was founded in?": "¿Qué equipo de fútbol fue fundado en %s?",
 	"Which team plays in?": "¿Qué equipo juega en %s?",
 	"Which team trains?": "¿Qué equipo entrena %s?",
+	"Which coach trains?": "¿Qué entrenador entrena al %s?",
+	"Which is the stadium of?": "¿Cuál es el estadio del %s?",
 
 	"Which f1 driver was born in?": "¿Qué piloto de F1 nació en %s?",
 	"Which f1 driver has more podiums?": "¿Qué piloto de F1 tiene más podiums?",
