--- a/question_generator/locales/en.json
+++ b/question_generator/locales/en.json
@@ -21,11 +21,12 @@
 	"Which planet has an area of x?" : "Which planet has an area of %s km2?",
 	"Which planet has a density of x?" : "Which planet has a density of %s kg/m3?",
 
-	"Who has more Grand Slams?": "Who has more Grand Slams?",
 	"Who has more followers? (Tennis)": "Who has more followers? (Tennis)",
 	"Who has more looses? (Tennis)": "Who has more looses? (Tennis)",
 	"Who has more wins? (Tennis)": "Who has more wins? (Tennis)",
 	"Which tennis player is from?" : "Which tennis player is from %s?",
+	"Which tennis player has wins?":"Which tennis player has wins?",
+	"What country is from?": "What country is from %s? (Tennis)",
 
 	"Which team plays in?": "Which team plays in %s?",
 	"Which team trains?": "Which team trains %s?",
