--- a/question_generator/locales/en.json
+++ b/question_generator/locales/en.json
@@ -37,6 +37,7 @@
 	"Which f1 driver was born in?": "Which f1 driver was born in %s?",
 	"Which f1 driver has more podiums?": "Which f1 driver has more podiums?",
 	"Which f1 driver has more wins?": "Which f1 driver has more wins?",
+	"Which f1 driver has wins?": "Which f1 driver has %s wins?",
 
 	"Which song is song by?": "Which song is sing by %s?",
 	"Which song was released in?": "Which song was released in %s?",
