--- a/question_generator/locales/es.json
+++ b/question_generator/locales/es.json
@@ -38,6 +38,7 @@
 	"Which f1 driver was born in?": "¿Qué piloto de F1 nació en %s?",
 	"Which f1 driver has more podiums?": "¿Qué piloto de F1 tiene más podiums?",
 	"Which f1 driver has more wins?": "¿Qué pilto de F1 tiene más victorias?",
+	"Which f1 driver has wins?": "¿Qué piloto de F1 tiene %s victorias?",
 	
 	"Which song is song by?": "¿Qué canción canta %s?",
 	"Which song was released in?": "¿Qué canción fue lanzada en %s?",
