--- a/docs/src/06_runtime_view.adoc
+++ b/docs/src/06_runtime_view.adoc
@@ -40,34 +40,8 @@ deactivate um
 
 When the user starts a game, the app generates a question and request the correct answer to the WikiData API. When the user choose a posible answer, the app checks if it is the correct answer. Then, this process is repeated until the end of the game.  
 
-[plantuml,"sequencediagram-game",png]
-----
-actor User as user
-participant WebApp as app
-participant GameMS as gameMS
-participant WikiDataAPI as api
+image::06_game.png["Game"]
 
-activate app
-
-user -> app: Start game
-app -> gameMS: Generate question
-gameMS -> api: Request correct answer\nfor the generated question
-api --> gameMS: Correct answer
-gameMS -> app: 
-app -> user: Show question and options
-
-loop Until end of the game
-    user -> app: Choose possible answer
-    app -> gameMS: Verify answer\nselected by the user
-    gameMS --> app: Correct or incorrect answer
-    app -> user: Show result\nand current score
-end
-
-user -> app: Finish game
-app --> user: Show final score
-
-deactivate app
-----
 === History
 In this view, the user can watch this options about his past games:
 
