--- a/docs/src/05_building_block_view.adoc
+++ b/docs/src/05_building_block_view.adoc
@@ -73,14 +73,16 @@ Detailed structure of the system. Focused on the components of the _User Interfa
 | *_Game_* 
 | Game screen where the user can play the game.
 
-| *_Participation_* 
+| *_Game Service_* 
 | Contains all user participations with the number of games played, correct/incorrect answers, and times.
 
 | *_Users Service_* 
 | Allows the client to create a new account for the application, log in and log out.
 
-| *_Question service_* 
+| *_Question Generator Service_* 
 | Allows to ask him questions and receive the answers of them.
 
+| *_Question Service_* 
+| Saves the questions.
 
 |=== 
