--- a/docs/src/06_runtime_view.adoc
+++ b/docs/src/06_runtime_view.adoc
@@ -49,18 +49,4 @@ In this view, the user can watch this options about his past games:
 - Best times
 - Correct/incorrect questions
 
-[plantuml,"sequencediagram-history",png]
-----
-actor User as user
-participant HistoryMS as MS
-participant MongoDB as db
-
-activate MS
-
-user -> MS: Request history
-MS -> db: Asks for the history
-db -> MS: Gives the user's history
-MS -> user: Shows the history
-
-deactivate MS
-----
+image::06_history.png["Game"]
