--- a/question_generator/locales/en.json
+++ b/question_generator/locales/en.json
@@ -39,14 +39,14 @@
 	"Which f1 driver has more wins?": "Which f1 driver has more wins?",
 	"Which f1 driver has wins?": "Which f1 driver has %s wins?",
 
-	"Which song is song by?": "Which song is sing by %s?",
+	"Which song is song by?": "Which song is sung by %s?",
 	"Which song was released in?": "Which song was released in %s?",
 	"Which song belongs to?": "Which song belongs to %s?",
 
-	"Which serie has episodes?": "Which serie has %s episodes?",
+	"Which serie has episodes?": "Which serie has %s chapters?",
 	"Which serie has seasons?": "Which serie has %s seasons?",
 
-	"Which movie was realeased in?": "Which movie was realeased in %s?",
+	"Which movie was realeased in?": "Which movie was released in %s?",
 	"Which movie was directed by?": "Which movie was directed by %s?",
 
 	"Which videogames has sold more units?": "Which videogames has sold more units?",
@@ -64,7 +64,8 @@
 	"Which is the homeVenue of?": "Which is the homeVenue of %s?",
 	"Which is the coach of?": "Which is the coach of %s?",
 	"Which basketball team plays in?": "Which basketball team plays in %s?",
-	"Which basketball team is trained by?": "Which basketball team is trained by %s?"
-
+	"Which basketball team is trained by?": "Which basketball team is trained by %s?",
+	"Which basketball team belongs to?": "Which basketball team belongs to %s?",
+	"Which is the division of?": "Which is the division of %s?"
 
 }
