--- a/question_generator/locales/en.json
+++ b/question_generator/locales/en.json
@@ -25,7 +25,7 @@
 	"Who has more looses? (Tennis)": "Who has more looses? (Tennis)",
 	"Who has more wins? (Tennis)": "Who has more wins? (Tennis)",
 	"Which tennis player is from?" : "Which tennis player is from %s?",
-	"Which tennis player has wins?":"Which tennis player has wins?",
+	"Which tennis player has wins?":"Which tennis player has %s wins?",
 	"What country is from?": "What country is from %s? (Tennis)",
 
 	"Which team plays in?": "Which team plays in %s?",
