--- a/question_generator/locales/fr.json
+++ b/question_generator/locales/fr.json
@@ -1,48 +1,71 @@
 {
-	"Which city is in?": "Dans quelle ville se trouve %s ?",
-	"Which city has an area of km2?": "Quelle ville a une superficie de %s km2 ?",
-	"Which city is governed by?": "Quelle ville est gouvernée par %s ?",
-	"Which city is in the time zone?": "Dans quel fuseau horaire se trouve %s ?",
-	"Which autonomous community of Spain has an area of km2?": "Quelle communauté autonome d'Espagne a une superficie de %s km2 ?",
-	"Which autonomous community of Spain has a population of?": "Quelle communauté autonome d'Espagne a une population de %s habitants ?",
+	"Which city is higher above sea level?": "Quelle ville est située à une altitude plus élevée ?",
+	"Which city has more population?": "Quelle ville a une population plus nombreuse ?",
+	"Which city is in %s?": "Dans quelle ville se trouve %s ?",
+	"Which city has an area of %s km2?": "Quelle ville a une superficie de %s km2 ?",
+	"Which city is governed by %s?": "Quelle ville est gouvernée par %s ?",
+	"Which city is in the time zone %s?": "Dans quelle ville se trouve le fuseau horaire %s ?",
+
+	"Which autonomous community of Spain has an area of?": "Quelle communauté autonome d'Espagne a une superficie de %s km2 ?",
+	"Which autonomous community of Spain has a population of?": "Quelle communauté autonome d'Espagne a une population de %s ?",
 	"Which autonomous community of Spain has a capital called?": "Quelle communauté autonome d'Espagne a pour capitale %s ?",
 	"Which autonomous community of Spain has a president called?": "Quelle communauté autonome d'Espagne a pour président %s ?",
-	"Which autonomous community of Spain has as the highest point?": "Quelle communauté autonome d'Espagne a %s comme point culminant ?",
-	"Which planet has a mass of kg?": "Quelle planète a une masse de %s kg ?",
-	"Which planet has a radius of km?": "Quelle planète a un rayon de %s km ?",
-	"Which planet has an orbital period of days?": "Quelle planète a une période orbitale de %s jours ?",
-	"Which planet has as the lowest point?": "Quelle planète a %s comme point le plus bas ?",
-	"Which planet has as the highest point?": "Quelle planète a %s comme point le plus haut ?",
-	"Which planet has an area of km2?": "Quelle planète a une superficie de %s km2 ?",
-	"Which planet has a density of kg/m3?": "Quelle planète a une densité de %s kg/m3 ?",
-	"Which tennis player is from?": "De quel pays est originaire le joueur de tennis %s ?",
+	"Which autonomous community of Spain has x as the highest point?": "Quelle communauté autonome d'Espagne a %s comme point culminant ?",
+
+	"Which planet is bigger?": "Quelle planète a une masse de %s kg ?",
+	"Which planet has a mass of?": "Quelle planète a une masse de %s kg ?",
+	"Which planet has a radius of?": "Quelle planète a un rayon de %s km ?",
+	"Which planet has an orbital period of?": "Quelle planète a une période orbitale de %s jours ?",
+	"Which planet has x as the lowest point?": "Quelle planète a %s comme point le plus bas ?",
+	"Which planet has x as the highest point?": "Quelle planète a %s comme point le plus haut ?",
+	"Which planet has an area of x?": "Quelle planète a une superficie de %s km2 ?",
+	"Which planet has a density of x?": "Quelle planète a une densité de %s kg/m3 ?",
+	
+	"Who has more followers? (Tennis)": "Qui a le plus de followers ? (Tennis)",
+	"Who has more looses? (Tennis)": "Qui a le plus de défaites ? (Tennis)",
+	"Who has more wins? (Tennis)": "Qui a le plus de victoires ? (Tennis)",
+	"Which tennis player is from %s?": "De quel pays est originaire ce joueur de tennis %s ?",
+	"Which tennis player has %s record?": "Quel joueur de tennis détient le record de %s ?",
+	"What country is from %s? (Tennis)": "De quel pays est originaire %s ? (Tennis)",
+	
 	"Which team plays in?": "Dans quelle équipe joue %s ?",
 	"Which team trains?": "Quelle équipe entraîne %s ?",
-	"Which football team was founded in?": "Quelle équipe de football a été fondée en %s ?",
+	"Which football team was founded in?": "Dans quelle année a été fondée l'équipe de football %s ?",
 	"Which coach trains?": "Quel entraîneur entraîne %s ?",
 	"Which is the stadium of?": "Quel est le stade de %s ?",
+
 	"Which f1 driver was born in?": "Dans quel pays est né le pilote de F1 %s ?",
-	"Which song is sung by?": "Quelle chanson est chantée par %s ?",
-	"Which song was released in?": "Quelle chanson est sortie en %s ?",
+	"Which f1 driver has more podiums?": "Quel pilote de F1 a plus de podiums ?",
+	"Which f1 driver has more wins?": "Quel pilote de F1 a plus de victoires ?",
+	"Which f1 driver has wins?": "Quel pilote de F1 a %s victoires ?",
+
+	"Which song is sung by?": "Quelle chanson est interprétée par %s ?",
+	"Which song was released in?": "Quelle chanson a été publiée en %s ?",
 	"Which song belongs to?": "À quel album appartient la chanson %s ?",
-	"Which serie has episodes?": "Quelle série a %s épisodes ?",
-	"Which serie has seasons?": "Quelle série a %s saisons ?",
+
+	"Which serie has chapters?": "Quelle série comporte %s épisodes ?",
+	"Which serie has seasons?": "Quelle série compte %s saisons ?",
+
 	"Which movie was released in?": "Quel film est sorti en %s ?",
 	"Which movie was directed by?": "Quel film a été réalisé par %s ?",
+
+	"Which videogames has sold more units?": "Quel jeu vidéo s'est le mieux vendu ?",
 	"Which videogame was released in?": "Quel jeu vidéo est sorti en %s ?",
-	"Which paint belongs to genre?": "À quel genre appartient la peinture %s ?",
-	"Which paint was painted in?": "Quand la peinture %s a-t-elle été peinte ?",
+
+	"Which paint belongs to genre?": "Quelle peinture appartient au genre %s ?",
+	"Which paint was painted in?": "Quand la peinture %s a-t-elle été réalisée ?",
+
 	"Which author wrote?": "Quel auteur a écrit %s ?",
 	"Which is the original language of?": "Quelle est la langue originale de %s ?",
-	"Which book is written originally in?": "Quel livre a été écrit originellement en %s ?",
+	"Which book is written in?": "Quel livre est écrit initialement en %s ?",
 	"Which book was written by?": "Quel livre a été écrit par %s ?",
 	"Which book belongs to genre?": "À quel genre appartient le livre %s ?",
 
-	"Which is the homeVenue of?": "Quel est le domicile de %s?",
-	"Which is the coach of?": "Qui est l'entraîneur de %s?",
-	"Which basketball team plays in?": "Dans quelle équipe joue %s ?",
-	"Which basketball team is trained by?": "Quelle équipe est entraînée par %s ?",
-	"Which basketball team belongs to?": "À quel équipe de basket appartient %s?",
-    "Which is the division of?": "Quelle est la division de %s?"
+	"Which is the homeVenue of?": "Quel est le lieu de résidence de %s ?",
+	"Which is the coach of?": "Qui est l'entraîneur de %s ?",
+	"Which basketball team plays in?": "Dans quelle équipe de basketball joue %s ?",
+	"Which basketball team is trained by?": "Quelle équipe de basketball est entraînée par %s ?",
+	"Which basketball team belongs to?": "À quelle équipe de basketball appartient %s ?",
+	"Which is the division of?": "Quelle est la division de %s ?"
 
 }
