--- a/question_generator/locales/es.json
+++ b/question_generator/locales/es.json
@@ -26,7 +26,7 @@
 	"Who has more looses?": "¿Quién tiene más derrotas? (Tenis)",
 	"Who has more wins?": "¿Quién tiene más victorias? (Tenis)",
 	"Which tennis player is from?" : "¿Qué jugador es de %s?",
-	"Which tennis player has wins?": "¿Qué tenista tiene %s victorias?",
+	"Which tennis player has wins?": "¿Qué tenista tiene %s como record?",
 	"What country is from?": "¿De qué país es %s? (Tenis)",
 
 	"Which football team was founded in?": "¿Qué equipo de fútbol fue fundado en %s?",
