i18n files updated in question_generator

--- a/question_generator/locales/es.json
+++ b/question_generator/locales/es.json
@@ -1,7 +1,7 @@
 {
 	"Which city is higher above sea level?": "¿Qué ciudad está a mayor altitud?",
 	"Which city has more population?": "¿Qué ciudad tiene más población?",
-	"Which city is in?": "¿Qué ciudad se encuentra %s?",
+	"Which city is in?": "¿Qué ciudad se encuentra en %s?",
 	"Which city has an area of?": "¿Qué ciudad tiene un área de %s km2?",
 	"Which city is governed by?": "¿Qué ciudad es gobernada por %s?",
 	"Which city is in the time zone?": "¿Qué ciudad está en la zona horaria %s?",
