--- a/docs/src/11_technical_risks.adoc
+++ b/docs/src/11_technical_risks.adoc
@@ -9,9 +9,11 @@
 |Version management problems
 |Errors in version control can delay the project. Ignorance of the branches and their purpose can lead to code conflicts.
 |Lack of time
-|Not planning work well can result in difficulties meeting deadlines
+|Not planning work well can result in difficulties meeting deadlines.
 |Use of unknown technologies
-|The use of languages and technologies unknown to group members can make it difficult to perform assigned tasks
+|The use of languages and technologies unknown to group members can make it difficult to perform assigned tasks.
+|Non-optimal design
+|Poorly considered design decisions can lead to a fragile or difficult-to-scale architecture, leading to long-term maintenance issues.
 |===
 
 === Technical debts
@@ -20,4 +22,10 @@
 |Risk|Description
 |Insufficient documentation 
 |A lack of clear documentation about code and architecture can make it difficult to understand and maintain code, leading to additional work.
+|Lack of refactoring
+|The accumulation of redundant or outdated code can hinder future modifications and improvements, increasing the technical complexity of the project.
+|Poor test coverage
+|The absence of adequate test coverage can result in software that is prone to bugs and vulnerabilities that go undetected during the development.
+|Bug pile-up
+|Failure to properly resolve known bugs during development can result in code that is more problem-prone.
 |===
